# pythonProject6

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  python-drf.postman_collection.json  requirements.txt
apps/auth/: urls.py  views.py
apps/pizza/: filters.py  managers.py  serializers.py  views.py
apps/pizza/migrations/: 0002_rename_seze_pizzamodel_size_pizzamodel_created_at_and_more.py  0003_pizzamodel_pizza_shop.py  0005_pizzamodel_photo.py
apps/pizza_shop/: models.py  serializers.py  urls.py  views.py
apps/users/: models.py  permissions.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_profilemodel_options_alter_usermodel_options.py
backend/: manage.py
backend/apps/auth/: serializers.py  urls.py  views.py
backend/apps/pizza/: models.py  urls.py
backend/apps/posts/: apps.py  filters.py  managers.py  models.py  serializers.py  urls.py  views.py
backend/apps/users/: filters.py  managers.py  models.py  serializers.py  urls.py  views.py
backend/configs/: celery.py  settings.py  urls.py
backend/configs/extra_conf/: __init__.py  celery_conf.py  rest_configs.py
backend/core/: models.py
backend/core/enums/: action_token_enum.py  password_enum.py
backend/templates/: register.html
configs/: celery.py  settings.py  urls.py
configs/extra_conf/: celery_conf.py  email_conf.py  jwt_conf.py
core/: pagination.py
core/enums/: action_token_enum.py  regex_enum.py
core/services/: email_service.py  jwt_service.py
templates/: recovery.html  register.html
(+16 files in other folders)
